# dailylogfile

./: README.md  pyproject.toml
dailylogfile/: __init__.py  dailylogging.py
tests/: test_logger.py
