[project]
name = "dailylogfile"
version = "0.1.0"
description = "Opinionated daily log file manager with date formatting and compression."
authors = [
    { name = "James Reed", email = "james.reed@spectric.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "freezegun>=1.2",
    "coverage",
    "pytest-cov",
]

[tool.setuptools]
packages = ["dailylogfile"]


[tool.pytest.ini_options]
addopts = "-ra -q --cov=dailylogfile"
minversion = "6.0"
python_files = "test_*.py"
testpaths = [
    "tests",
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
