[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dailylogfile"
version = "0.1.0"
description = "Opinionated daily log file manager with date formatting and compression."
authors = [
    { name = "James Reed" }
]
maintainers = [
    { name = "James Reed" }
https://github.com/jamespreed/dailylogfile
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/jamespreed/dailylogfile"
Issues = "https://github.com/jamespreed/dailylogfile/issues"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "freezegun>=1.2",
    "coverage",
    "pytest-cov",
]

[tool.setuptools]
packages = ["dailylogfile"]


[tool.pytest.ini_options]
addopts = "-ra -q --cov=dailylogfile"
minversion = "6.0"
python_files = "test_*.py"
testpaths = [
    "tests",
]

